--- a/js/packages/web/public/manifest.json
+++ b/js/packages/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Metaplex NFT Marketplace",
-  "short_name": "Metaplex NFT Marketplace",
+  "name": "Solgangsta NFT Marketplace",
+  "short_name": "Solgangsta NFT Marketplace",
   "display": "standalone",
   "start_url": "./",
   "theme_color": "#002140",
